--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <i class="fa-brands fa-linkedin-in"></i>
   </a>
 </div>
-<p class="pt-2">© 2014 Company name. Designed by Themezy. All rights reserved</p>
+<p class="pt-2"></p>
   </div>
 </section>
 
